saramin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { include "app.fullname" . } }
  labels: { { - include "app.labels". | nindent 4 } }
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector: { { - include "app.selectorLabels". | nindent 4 } }
