saramin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: { { include "app.fullname" . } }
  labels: { { - include "app.labels". | nindent 4 } }
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: { { include "app.fullname" . } }
              servicePort: 80
